fixed overflow hidden on body/desktop

--- a/src/styles/scaffolding/base.less
+++ b/src/styles/scaffolding/base.less
@@ -10,7 +10,9 @@ body {
   color: @c-base;
   &.modal-open,
   &.floating-bar-active{
-    overflow: hidden;
+    .viewport-mobile &{
+      overflow: hidden;
+    }
   }
 }
 
